crates/rustereum/tests/ui/field_type.rs
use rustereum::prelude::*;

#[contract]
struct Bad {
    x: u128,
}

fn main() {}
